alterações no banco

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "PostgreConn": "Server=ep-black-sun-82829446.ap-southeast-1.aws.neon.fl0.io;Port=5432;Database=MeuBanco;User ID=fl0user;Password=4AnvfI9OBZMr;Ssl Mode=Require;Trust Server Certificate=true"
-        //"ExemploConnection": "Server=localhost;Port=3306;initial catalog=aula11;uid=root;"
-        // supabase senha: Sql@8403_new
+        "PostgreConn": "Server=ep-royal-king-36462045.ap-southeast-1.aws.neon.fl0.io;Port=5432;Database=MeuBanco;User ID=fl0user;Password=3uANSILEJcr4;Ssl Mode=Require;Trust Server Certificate=true"
     }
 }
